# sessionfs

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOGFOOD.md  Dockerfile  Dockerfile.mcp  GEMINI.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.agents/: README.md  atlas-backend.md  forge-devops.md  ledger-revenue.md  prism-frontend.md  scribe-docs.md  sentinel-security.md  shield-compliance.md  vault-licensing.md
.claude/commands/: release.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-api.yml  deploy-dashboard.yml  deploy-mcp.yml  deploy-site.yml  infra.yml  publish-images.yml  release.yml  security-scan.yml
.release/: claude-md-public.txt  private-files.txt
brand/: colors.css
charts/sessionfs/: Chart.yaml  README.md  values.minimal.yaml  values.production.yaml  values.yaml
dashboard/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/.release/: private-files.txt
dashboard/src/: App.tsx  index.css  main.tsx
docs/: cli-reference.md  delete-lifecycle.md  environment-variables.md  mcp-remote.md  pricing.md  project-context.md  quickstart.md  rules.md  self-hosted.md  sync-guide.md  troubleshooting.md
docs/security/: secret-detection-analysis.md  security-spec.md  threat-model.md
infrastructure/terraform/: cicd.tf  cloudrun.tf  database.tf  iam.tf  main.tf  migration.tf  network.tf  outputs.tf  secrets.tf  storage.tf  variables.tf
landing/: index.html  robots.txt  vercel.json
landing/.vercel/: project.json
packaging/homebrew/: sessionfs.rb
site/: astro.config.mjs  package-lock.json  package.json
src/sessionfs/: __init__.py  audit.py  session_id.py
src/spec/: SPEC.md  convert_cc.py  validate.py
src/spikes/: spike_1a_cc_findings.md  spike_1a_cc_read.py  spike_1a_cc_schema.md  spike_1b_codex_findings.md  spike_1b_codex_read.py  spike_1b_codex_schema.md  spike_2a_cc_findings.md  spike_2a_cc_writeback.py
tests/: conftest.py  test_security_m10_secrets.py  test_security_m11_input_validation.py  test_security_m12_https.py  test_security_m1_path_traversal.py  test_security_m2_session_id.py  test_security_m3_upload_limit.py  test_security_m4_cors.py  test_security_m5_symlink.py  test_security_m6_writeback.py  test_security_m7_tar_validation.py  test_security_m8_permissions.py  test_security_m9_audit.py
tests/integration/: test_capture_pipeline.py  test_cli_commands.py  test_cross_tool_roundtrip.py  test_integration_pipeline.py
tests/server/: conftest.py
tests/unit/: test_amp.py  test_archive.py  test_autosync.py  test_cc_converter.py  test_cc_parser.py  test_cli_common.py  test_cline.py  test_cmd_rules.py  test_cmd_ticket_watch.py  test_codex_watcher.py  test_config.py  test_copilot.py  test_cost.py  test_cursor.py  test_delete_cli.py  test_dlp.py  test_eks_round2.py  test_gemini.py  test_index.py  test_instruction_provenance.py  test_judge.py  test_judge_base_url.py  test_local_store.py  test_mcp_remote.py  test_mcp_search.py  test_mcp_server.py  test_resilience.py  (+17 more)
(+352 files in other folders)
