[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sessionfs"
version = "0.2.0"
description = "Capture, sync, and resume AI coding sessions across 8 tools — Claude Code, Codex, Gemini, Copilot, Cursor, Amp, Cline, and Roo Code."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    { name = "SessionFS Contributors" },
]
keywords = ["ai", "agents", "sessions", "sync", "claude", "codex", "gemini", "cursor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "jsonschema>=4.20,<5.0",
    "watchdog>=4.0,<6.0",
    "typer>=0.12,<1.0",
    "rich>=13.0,<14.0",
    "httpx>=0.27,<1.0",
    "mcp>=1.0,<2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://sessionfs.dev"
Repository = "https://github.com/sessionfs/sessionfs"
Documentation = "https://sessionfs.dev/docs"
Issues = "https://github.com/sessionfs/sessionfs/issues"

[project.optional-dependencies]
server = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "python-multipart>=0.0.9",
    "boto3>=1.34,<2.0",
    "pydantic-settings>=2.0,<3.0",
    "PyJWT>=2.8,<3.0",
    "google-cloud-storage>=2.14,<3.0",
]
dev = [
    "sessionfs[server]",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
    "aiosqlite>=0.20,<1.0",
    "ruff>=0.3,<1.0",
    "mypy>=1.8,<2.0",
    "build>=1.0,<2.0",
]

[project.scripts]
sfs = "sessionfs.cli.main:cli_main"
sfsd = "sessionfs.daemon.main:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/sessionfs"]

[tool.hatch.build]
include = [
    "src/sessionfs/**/*.py",
    "src/sessionfs/spec/schemas/*.json",
    "src/sessionfs/spec/examples/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"src/sessionfs/cli/main.py" = ["E402"]
"src/sessionfs/mcp/remote_server.py" = ["E402"]
"src/sessionfs/server/routes/sessions.py" = ["E402"]
"src/sessionfs/store/local.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["no-any-return", "assignment", "var-annotated", "arg-type", "valid-type", "attr-defined", "index"]
